extends "res://scenes/menu.gd"




func _on_Button_pressed(): # ALPHABET
	get_tree().change_scene("res://scenes/alphabet.tscn")


func _on_Button2_pressed(): # VOCABULARY
	get_tree().change_scene("res://scenes/vocabulary.tscn")


func _on_Button3_pressed(): # GEOGRAPHY
	pass # Replace with function body.


func _on_Button4_pressed(): # ABOUT LUSHOOTSEED
	pass # Replace with function body.
